# mock-oauth2

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
.github/workflows/: ci.yml  release.yml
src/: config.py  dto.py  models.py  server.py
src/controllers/: admin_controller.py  client_controller.py  oauth_controller.py  user_controller.py
src/templates/: auth.html  base.html  clients.html  consent.html  dashboard.html  home.html  login.html  users.html
tests/: conftest.py
tests/unit/: test_admin_controller.py  test_client_controller.py  test_config.py  test_models.py  test_oauth_controller.py  test_server.py  test_user_controller.py
